--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "main.js",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.10",
     "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/material": "^5.12.1",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -41,6 +45,7 @@
     "sass": "^1.56.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.3",
+    "styled-components": "^5.3.10",
     "sweetalert": "^2.1.2",
     "uuid": "^9.0.0",
     "valid-url": "^1.0.9",
