--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@material-ui/core": "^5.0.0-beta.5",
     "@mui/material": "^5.12.1",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "agora-rtc-react": "^1.1.3",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.3.0",
     "firebase": "^9.14.0",
     "fuse.js": "^6.6.2",
     "js-cookie": "^3.0.1",
@@ -28,8 +30,10 @@
     "react-audio-voice-recorder": "^1.0.4",
     "react-blur": "^1.1.1",
     "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^4.8.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.39.4",
@@ -40,8 +44,10 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-spring-bottom-sheet": "^3.4.1",
     "react-toggle": "^4.1.3",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.5.0",
     "sass": "^1.56.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.3",
